# parser

./: .gitignore  pyproject.toml
parser/: avito.py  selectel.py
